# smartscan-android-lib

./: CHANGELOG.md  README.md  Test Results - FileEmbeddingStoreTest.html
core/: build.gradle.kts
core/src/androidTest/kotlin/com/fpf/smartscansdk/core/models/: ModelManagerTest.kt
core/src/main/cpp/: CMakeLists.txt  hnswlib_jni.cpp
core/src/main/java/com/fpf/smartscansdk/core/: Errors.kt  Helpers.kt
core/src/main/java/com/fpf/smartscansdk/core/classification/: Classification.kt  ClassificationResult.kt  FewShotClassification.kt
core/src/main/java/com/fpf/smartscansdk/core/cluster/: Cluster.kt  ClusterModels.kt  ClusterResult.kt  ClusterTypes.kt  Helpers.kt  IncrementalClusterer.kt
core/src/main/java/com/fpf/smartscansdk/core/detector/: DetectorProvider.kt  IDetectorProvider.kt
core/src/main/java/com/fpf/smartscansdk/core/embeddings/: Classification.kt  Embedding.kt  EmbeddingCodec.kt  EmbeddingProvider.kt  EmbeddingStore.kt  EmbeddingUtils.kt  Embeddings.kt  F32EmbeddingCodec.kt  FileEmbeddingCodec.kt  FileEmbeddingStore.kt  HnswIndex.kt  IDetectorProvider.kt  IEmbeddingProvider.kt  IEmbeddingStore.kt  QInt8EmbeddingCodec.kt  QueryResult.kt
core/src/main/java/com/fpf/smartscansdk/core/indexers/: ImageIndexer.kt  VideoIndexer.kt
docs/: README.md
docs/core/: classification.md  clustering.md  embeddings.md  indexers.md  media.md  processors.md
docs/core/embeddings/: embedding.md  providers.md  storage.md  utils.md
docs/ml/: model-manager.md  models.md  providers.md
ml/: build.gradle.kts
ml/src/main/java/com/fpf/smartscansdk/ml/models/: BaseModel.kt  (+6 more)
(+97 files in other folders)
